[package]
name = "dapp4-nft-staking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
solana-program = "1.14.7"
thiserror = "1.0.37"

[lib]
name = "nft_stake_program"
crate-type = ["cdylib", "lib"]
